Got the colors and background images mostly set up

--- a/index.html
+++ b/index.html
@@ -1,60 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=UTF-8" />
+<meta charset="UTF-8" />
 <title>The KSAS Template</title>
 <link rel="stylesheet" href="style.css" media="all" />
 </head>
 
 <body>
+<div class="outer-wrapper mod">
 
 <div class="section header header-main mod">
 	<div class="nav sub-nav">
 		<div class="center">
-		
+		subnav
 		</div>
 	</div>
 	<div class="banner">
-		<div class="center">
-		
+		<div class="center mod">
+			<div class="col colfirst logo-parent">
+				<a href="http://krieger.jhu.edu">Johns Hopkins Zanvyl Krieger School of Arts and Sciences</a>
+			</div>
+			<div class="col colwide colend logo-main">
+			logo main
+			</div>
 		</div>
 	</div>
 	<div class="search">
 		<div class="center">
-		
+		search
 		</div>
 	</div>
 </div>
 
+
 <div class="section main-content">
 	<div class="center mod">
-		<div class="col nav-and-details">
+	
+		<div class="col colfirst nav-and-details">
 			<div class="nav main-nav">
-				<ul></ul>
+				<ul>
+					<li>one</li>
+					<li>two</li>
+					<li>three</li>
+					<li>four</li>
+					<li>main-nav</li>
+				</ul>
 			</div>
 			<div class="details">
-			
+			details
 			</div>
 		</div>
 		<div class="col colwide colend primary mod">
 			<div class="feature">
-			
+			feature
 			</div>
-			<div class="col colwide body-content">
-			
+			<div class="col colfirst colwide body-content">
+			body content, followed by more content in the body, whereby which would have be followed by such that there is more content as well, heretoforward, and so on
 			</div>
 			<div class="col colend sidebar aside">
-			
+			sidebar aside
 			</div>
 		</div>
+		
 	</div>
 </div>
 
 <div class="section footer footer-main">
 	<div class="center">
-		
+	footer
 	</div>
 </div>
+
+</div> <!-- end outer-wrapper (used for some padding for the edges) -->
 
 <!-- jQuery and jQuery UI libraries linked to here for convenience. -->
 <!--
