Reverted to standard styles with Verdana, etc. Also added subnavigation code and prepared for import into SE.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,11 @@
    	var navigation = { };
 </script>
 <script>
-	navigation.page = "About";
+	// This is the CSS ID of the top level page you want highlighted (delete or comment out to omit)
+	navigation.top = "navAbout"; 		
+	
+	// This is the CSS ID of the subpage you want highlighted (delete or comment out to omit)
+	navigation.sub = "subnavBuildings"; 	 
 </script>
 <script type="text/javascript" src="http://webapps.jhu.edu/jhuniverse/includes/explorer_bar/js/jhuBar.js"></script>
 <div class="outer-wrapper mod">
@@ -41,7 +45,7 @@
 				<a href="http://krieger.jhu.edu">Johns Hopkins Zanvyl Krieger School of Arts and Sciences</a>
 			</div>
 			<div class="col colwide colend logo-main">
-				<a href="#"><img src="images/header-sample.jpg" alt="Sample Image Home" /></a>
+				<a href="#"><img src="images/sample-dept-header.jpg" alt="Sample Image Home" /></a>
 			</div>
 		</div>
 	</div>
@@ -62,23 +66,30 @@
 
 </div>
 
-
 <div class="section main-content">
 	<div class="center mod">		
-		<div class="col colfirst nav-and-details">
+		<div id="navDetails" class="col colfirst nav-and-details">
 			<div id="mainNav" class="nav main-nav">
 				<ul>
-					<li><a id="navHome" href=".">Home</a></li>
-					<li><a id="navAbout" href="about.html">About</a></li>
-					<li><a id="navUndergraduate" href="#">Undergraduate Program</a></li>
-					<li><a id="navGraduate" href="#">Graduate Program</a></li>
-					<li><a id="navCourses" href="#">Courses</a></li>
-					<li><a id="navEvents" href="#">Events</a></li>
-					<li><a id="navResources" href="#">Resources</a></li>
-					<li><a id="navContact" href="#">Contact</a></li>
+					<li id="navHome"><a href=".">Home</a></li>
+					<li id="navAbout">
+						<a href="about.html">About</a>
+						<ul>
+							<li id="subnavHistory"><a href="#">Our History</a></li>
+							<li id="subnavStaff"><a href="#">About the Staff</a></li>
+							<li id="subnavBuildings"><a href="#">Buildings and Resources</a></li>
+						</ul>
+					</li>
+					<li id="navUndergraduate"><a href="#">Undergraduate Program</a></li>
+					<li id="navGraduate"><a href="#">Graduate Program</a></li>
+					<li id="navCourses"><a href="#">Courses</a></li>
+					<li id="navEvents"><a href="#">Events</a></li>
+					<li id="navResources"><a href="#">Resources</a></li>
+					<li id="navContact"><a href="#">Contact</a></li>
 				</ul>
 			</div>
-			<p class="details">
+			<div class="details">
+			<p>
 				Department of Sample<br/>
 				Johns Hopkins University<br/>
 				3400 N. Charles Street<br/>
@@ -89,11 +100,12 @@
 				Fax (410) 516-4757<br/>
 				Email: english@jhu.edu<br/>
 			</p>
+			</div>
 		</div>
-		<div class="col colwide colend primary mod">
+		<div id="primaryContent" class="col colwide colend primary mod">
 			
-			<div id="bodyContent" class="">
-			<div class="body-content">
+			<div id="bodyContent" class="mod">
+			<div class="se-body-content">
 				<h1>Heading 1 (body content area)</h1>
 				<p>The body content, followed by more content in the body, whereby which would have be followed by such that there is more content as well, heretoforward, and so on.</p>
 				<h2>Heading 2</h2>
@@ -126,12 +138,20 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script>
 $(document).ready(function() {
-	var linkID;
+	var topID, subID;
 	
-	navigation.page = navigation.page || "";
-	linkID = "#nav" + navigation.page;
-		
-	$(linkID).addClass('current');
+	topID = navigation.top;
+	subID = navigation.sub;
+	
+	if(topID) {
+		topID = "#" + topID;
+		$(topID).addClass('current');
+	}
+	if(subID) {
+		subID = "#" + subID;
+		$(subID).addClass('current-sub');
+	}
+	
 });
 </script>
 
